# rust-jvm

./: Cargo.toml  README.md
jvm/: Cargo.toml
jvm/src/: lib.rs
jvm/src/api/: jvm_api.rs  mod.rs
jvm/src/core/: class_loader.rs  class_parser.rs  context.rs
jvm/src/core/heap/: heap.rs
jvm/src/core/interpreter/: interpreter.rs  local_variables.rs  mod.rs
jvm/src/core/klass/: field.rs  method.rs  mod.rs
jvm/src/core/native/: mod.rs  native_method_repo.rs
jvm/src/share/: mod.rs
jvm/src/share/classfile/: attribute.rs  class_loader.rs  class_parser.rs  constant_pool.rs  field.rs  klass.rs  method.rs  mod.rs
jvm/src/share/interpreter/: evaluation_stack.rs  evaluation_stack_test.rs  interpreter.rs  interpreter_test.rs  local_variables.rs  local_variables_test.rs  mod.rs
jvm/src/share/memory/: heap.rs  jvm_object.rs  mod.rs  oop.rs
jvm/src/share/native/: class.rs  mod.rs  native_helper_classes.rs  native_method_repo.rs  native_methods.rs  object.rs
jvm/src/share/parser/: descriptors.rs  descriptors_tests.rs  mod.rs  parser.rs
jvm/src/share/parser/grammar/: descriptors.lalrpop
jvm/src/share/runtime/: api_event.rs  mod.rs  stack_frame.rs  thread.rs
jvm/src/share/utilities/: context.rs  global_symbols.rs  jvm_exception.rs  jvm_value.rs  mod.rs  testing.rs
resources/mypack/: SimpleMain.java
resources/tests/: ArrayCreating.java  ExceptionThrowing.java  Main2.java  (+3 more)
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/core/: class_loader.rs  class_parser.rs  interpreter.rs  jvm_exception.rs  jvm_value.rs  mod.rs  opcode.rs  stack_frame.rs
runtime/src/core/heap/: jvm_object.rs  mod.rs
runtime/src/core/interpreter/: evaluation_stack.rs  evaluation_stack_test.rs  interpreter.rs  interpreter_test.rs  local_variables.rs
runtime/src/core/klass/: access_flags.rs  attribute.rs  constant_pool.rs  field.rs  klass.rs  method.rs
runtime/src/core/native/: mod.rs  native_methods.rs
src/: Main2.java  main.rs  tests.rs
tests/: Cargo.toml
utils/: Cargo.toml
(+21 files in other folders)
