[package]
name = "rust-jvm"
version = "0.1.0"
authors = ["barnab"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "runtime"}
utils = { path = "utils"}

[workspace]
members = ["runtime", "utils", "tests"]
