[package]
name = "rust-jvm"
version = "0.1.0"
authors = ["barnab"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "runtime"}
utils = { path = "utils"}
log4rs = "0.12.0"
log = "0.4.8"

[workspace]
members = ["runtime", "utils", "tests"]
