[package]
name = "jvm"
version = "0.1.0"
authors = ["barnab <bittnerbarni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
utils = { path = "../utils"}
byteorder = "1"
cesu8 = "1.1.0"
cfg-if = "1.0.0"
mockall = "0.9.1"
mockall_double = "0.2.0"
log = "0.4.14"
lazy_static = "1.4.0"
lalrpop-util = "0.19.0"
regex = "1"
