[package]
name = "runtime"
version = "0.1.0"
authors = ["barnab <bittnerbarni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
byteorder = "1"
cesu8 = "1.1.0"
cfg-if = "0.1.10"
mockall = "0.7.1"
